--- a/vignettes/GWAScatPaper.Rmd
+++ b/vignettes/GWAScatPaper.Rmd
@@ -2,7 +2,7 @@
 title: "Paper"
 author: "RG"
 date: "2023-06-23"
-vignette: >
+vignette: 
   %\VignetteIndexEntry{Paper}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
